To CitiesDropdown added functionality to show only those cities that have active ads